<resources>
    <string name="app_name">CHD</string>
    <string name="result_label">Result</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="gender_string">Gender</string>
    <string name="chest_paint_type_string">Chest Paint Type</string>
    <string name="fast_sugar">fasting blood sugar yes if >120</string>
    <string name="ecg_of_the_patient_in_rest">ECG of the patient in rest</string>
    <string name="exercise">Exercise included Angina?</string>
    <string name="slope_string">The slope of the peak exercise </string>
    <string name="thal_string">Thal</string>
    <string name="vessels_string">Number of major vessels colored</string>
    <string name="hint_blood_pressure">Resting blood pressure</string>
    <string name="hint_cholesterol">Serum cholesterol mg/dl</string>
    <string name="hint_max_heart_rate">Maximum heart rate Achieved</string>
    <string name="hint_st_depression">ST depression included by exercise</string>
    <string name="predict_string">Predict</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="chest_paints">
        <item>typical angina</item>
        <item>Female</item>
    </string-array>
    <string-array name="yes_no_question">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="ecg">
        <item>Having ST-T wave</item>
        <item>Female</item>
    </string-array>
    <string-array name="slopes">
        <item>up sloping</item>
        <item>Female</item>
    </string-array>
    <string-array name="vessels">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="thals">
        <item>normal</item>
        <item>hard</item>
    </string-array>
</resources>
