<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <EditText
                    android:id="@+id/input_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_age"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/gender_string"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_blood_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_blood_pressure"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_cholesterol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cholesterol"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_max_heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_max_heart_rate"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_st_depression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_st_depression"/>

        </android.support.design.widget.TextInputLayout>


        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_cpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chest_paint_type_string"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_blood_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fast_sugar"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_ecg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ecg_of_the_patient_in_rest"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_slope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/slope_string"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_vessels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vessels_string"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_thal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/thal_string"/>

        <Button
            android:id="@+id/btn_predict"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/predict_string"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>